--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Place an Order"
+        android:text="@string/title"
         android:id="@+id/textView"
         android:layout_row="0"
         android:layout_column="0"
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Double Double $3.60"
+        android:text="@string/double_double"
         android:id="@+id/textView2"
         android:layout_row="1"
         android:layout_column="0"
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Cheeseburger $2.15"
+        android:text="@string/cheeseburgers"
         android:id="@+id/textView3"
         android:layout_row="2"
         android:layout_column="0"
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="French Fries $1.65"
+        android:text="@string/french_fries"
         android:id="@+id/textView4"
         android:layout_row="3"
         android:layout_column="0"
@@ -88,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Shakes $2.20"
+        android:text="@string/shakes"
         android:id="@+id/textView5"
         android:layout_row="4"
         android:layout_column="0"
@@ -108,7 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Fountain Drinks (pick size)"
+        android:text="@string/fountain_drinks"
         android:id="@+id/textView6"
         android:layout_row="5"
         android:layout_column="0"
@@ -118,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Small $1.45"
+        android:text="@string/small"
         android:id="@+id/textView7"
         android:layout_row="6"
         android:layout_column="0"
@@ -138,7 +138,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium $1.55"
+        android:text="@string/medium"
         android:id="@+id/textView8"
         android:layout_row="7"
         android:layout_column="0"
@@ -158,7 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Large $1.75"
+        android:text="@string/large"
         android:id="@+id/textView9"
         android:layout_row="8"
         android:layout_column="0"
@@ -177,11 +177,12 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Place Order"
+        android:text="@string/order_btn"
         android:id="@+id/placeOrderButton"
         android:layout_row="8"
         android:layout_columnSpan="2"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:onClick="sendOrder"/>
 
 </GridLayout>
