--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -42,7 +42,8 @@
         android:id="@+id/doubleDoubleEditText"
         android:layout_row="1"
         android:layout_column="1"
-        android:digits="0123456789" />
+        android:digits="0123456789"
+        android:gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -62,7 +63,8 @@
         android:id="@+id/cheeseburgerEditText"
         android:layout_row="2"
         android:layout_column="1"
-        android:digits="0123456789" />
+        android:digits="0123456789"
+        android:gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -82,7 +84,8 @@
         android:id="@+id/frenchFriesEditText"
         android:layout_row="3"
         android:layout_column="1"
-        android:digits="0123456789" />
+        android:digits="0123456789"
+        android:gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -102,7 +105,8 @@
         android:id="@+id/shakesEditText"
         android:layout_row="4"
         android:layout_column="1"
-        android:digits="0123456789" />
+        android:digits="0123456789"
+        android:gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -132,7 +136,8 @@
         android:id="@+id/smallDrinksEditText"
         android:layout_row="6"
         android:layout_column="1"
-        android:digits="0123456789" />
+        android:digits="0123456789"
+        android:gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -152,7 +157,8 @@
         android:id="@+id/mediumDrinksEditText"
         android:layout_row="7"
         android:layout_column="1"
-        android:digits="0123456789" />
+        android:digits="0123456789"
+        android:gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -172,7 +178,8 @@
         android:id="@+id/largeDrinksEditText"
         android:layout_row="8"
         android:layout_column="1"
-        android:digits="0123456789" />
+        android:digits="0123456789"
+        android:gravity="center"/>
 
     <Button
         android:layout_width="wrap_content"
