--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/total"
-        android:id="@+id/textView10"
+        android:id="@+id/totalTextView"
         android:layout_marginTop="83dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -27,8 +27,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/item_count"
-        android:id="@+id/textView11"
-        android:layout_below="@+id/textView10"
+        android:id="@+id/itemCountTextView"
+        android:layout_below="@+id/totalTextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="45dp"/>
@@ -38,8 +38,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/subtotal"
-        android:id="@+id/textView12"
-        android:layout_below="@+id/textView11"
+        android:id="@+id/subtotalTextView"
+        android:layout_below="@+id/itemCountTextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
@@ -48,8 +48,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tax"
-        android:id="@+id/textView13"
-        android:layout_below="@+id/textView12"
+        android:id="@+id/taxTextView"
+        android:layout_below="@+id/subtotalTextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
@@ -60,5 +60,6 @@
         android:id="@+id/button"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:onClick="returnToOrderEntry"/>
 </RelativeLayout>
